Fix bug in app map initialization, also fix template error for .Year in footer, add home page

--- a/templates/partials/footer.partial.gohtml
+++ b/templates/partials/footer.partial.gohtml
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p class="text-center">Copyright &copy; {{ .Year }} Your Website Name</p>
+                <p class="text-center">Some Footer Data</p>
             </div>
         </div>
     </div>
