Setup route + handler for all site pages, fix typos in file names

--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -29,8 +29,8 @@
                             Breeds
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/breeds-cats">Cat Breeds</a></li>
-                            <li><a class="dropdown-item" href="/breeds-dogs">Dog Breeds</a></li>
+                            <li><a class="dropdown-item" href="/cat-breeds">Cat Breeds</a></li>
+                            <li><a class="dropdown-item" href="/dog-breeds">Dog Breeds</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
