Add in some client side handlers to retrieve abstract factory data

--- a/templates/test.page.gohtml
+++ b/templates/test.page.gohtml
@@ -16,7 +16,17 @@
                     <span class="text-muted">Nothing Received Yet...</span>
                 </pre>
             </div>
-
+            <hr class="my-4">
+            <h3 class="mt-4">Abstract Factory Pattern</h3>
+            <div>
+                <a href="javascript:void(0)" id="dog-abstract-factory-btn" class="btn btn-outline-secondary">Get a Dog from Abstract Factory</a>
+                <a href="javascript:void(0)" id="cat-abstract-factory-btn" class="btn btn-outline-secondary">Get a Cat from Abstract Factory</a>
+            </div>
+            <div class="mt-2" style="outline: 1px solid silver; padding: 2px;">
+                <pre id="abstract-factory-output">
+                    <span class="text-muted">Nothing Received Yet...</span>
+                </pre>
+            </div>
         </div>
     </div>
 </div>
@@ -45,6 +55,30 @@ document.addEventListener('DOMContentLoaded', function() {
                     document.getElementById('factory-output').innerHTML = data.error;
                 } else {
                     document.getElementById('factory-output').innerText = JSON.stringify(data, null, 2);
+                }
+            });
+    });
+
+    document.getElementById('dog-abstract-factory-btn').addEventListener('click', function() {
+        fetch('/api/dog-from-abstract-factory')
+            .then(response => response.json())
+            .then(data => {
+                if (data.error) {
+                    document.getElementById('abstract-factory-output').innerHTML = data.error;
+                } else {
+                    document.getElementById('abstract-factory-output').innerText = JSON.stringify(data, null, 2);
+                }
+            });
+    });
+
+    document.getElementById('cat-abstract-factory-btn').addEventListener('click', function() {
+        fetch('/api/cat-from-abstract-factory')
+            .then(response => response.json())
+            .then(data => {
+                if (data.error) {
+                    document.getElementById('abstract-factory-output').innerHTML = data.error;
+                } else {
+                    document.getElementById('abstract-factory-output').innerText = JSON.stringify(data, null, 2);
                 }
             });
     });
